--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,24 @@ node_modules
 /src-capacitor/www
 /src-capacitor/node_modules
 
+# Capacitor Android platform
+/src-capacitor/android/.idea/
+/src-capacitor/android/.gradle/
+/src-capacitor/android/build/
+/src-capacitor/android/app/build/
+
+# Capacitor iOS platform
+/src-capacitor/ios/App/Pods/
+/src-capacitor/ios/App/build/
+/src-capacitor/ios/App/App.xcworkspace/
+/src-capacitor/ios/App/xcuserdata/
+/src-capacitor/ios/App/DerivedData/
+/src-capacitor/ios/App/Carthage/
+
+# Ignore environment-specific config (optional)
+/src-capacitor/ios/App/local.properties
+/src-capacitor/android/local.properties
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
@@ -31,3 +49,4 @@ yarn-error.log*
 
 # local .env files
 .env.local*
+.env
