--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@typescript-eslint/parser": "^8.18.0",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-vue": "^9.30.0",
     "globals": "^15.12.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.3",
     "vite-plugin-checker": "^0.8.0",
     "vue-tsc": "^2.1.10"
