--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@quasar/app-vite": "^2.0.2",
     "@types/node": "^20.17.10",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/parser": "^8.19.0",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "autoprefixer": "^10.4.20",
@@ -43,6 +43,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.5.3",
     "vite-plugin-checker": "^0.8.0",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   },
   "engines": {
