--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Nenad <nbursa@gmail.com>",
   "type": "module",
   "private": true,
+  "homepage": "https://shop.nenadbursac.com",
   "scripts": {
     "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
@@ -14,7 +15,9 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "postinstall": "quasar prepare",
-    "analyze": "quasar build --analyze"
+    "analyze": "quasar build --analyze",
+    "predeploy": "npm run build",
+    "deploy": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
@@ -35,8 +38,10 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "eslint": "^9.17.0",
     "eslint-plugin-vue": "^9.30.0",
+    "gh-pages": "^6.3.0",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
