--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
     "predeploy": "npm run build",
-    "deploy": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa"
+    "deploy-old": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa",
+    "deploy": "cross-env NODE_ENV=production quasar build -m spa && rm -f dist/spa/CNAME && gh-pages -d dist/spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
