--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "analyze": "quasar build --analyze",
     "predeploy": "npm run build",
     "deploy-old": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa",
-    "deploy": "cross-env NODE_ENV=production quasar build -m spa && rm -f dist/spa/CNAME && gh-pages -d dist/spa"
+    "deploy": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
