feat(app):  Email confirmation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-VITE_API_URL=your_api_url
 NODE_ENV=development
+
+VITE_API_URL=your_api_url
+VITE_EMAIL_ADMIN=your_email
+
+SMTP_HOST=your_smtp_host
+SMTP_PORT=your_smtp_port
+SMTP_SECURE=boolean
+SMTP_USER=your_smtp_user_email
+SMTP_PASS=smtp_user_pass
