--- a/package.json
+++ b/package.json
@@ -4,25 +4,34 @@
   "description": "A Quasar Project",
   "productName": "E-Commerce Platform",
   "author": "Nenad <nbursa@gmail.com>",
-  "type": "module",
   "private": true,
+  "type": "module",
   "homepage": "https://shop.nenadbursac.com",
   "scripts": {
     "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "clean": "quasar clean",
-    "dev": "quasar dev",
+    "dev:server-ts": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm  --trace-deprecation server/index.ts",
+    "dev:server": "node --env-file=.env server/index.js",
+    "dev:client": "quasar dev",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build": "quasar build",
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
     "predeploy": "npm run build",
-    "deploy": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa",
-    "deploy-old": "cross-env NODE_ENV=production quasar build -m spa && rm -f dist/spa/CNAME && gh-pages -d dist/spa"
+    "deploy": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@types/express": "^5.0.0",
     "axios": "^1.2.1",
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.9",
     "pinia": "^2.0.11",
     "quasar": "^2.17.5",
     "vue": "^3.4.18",
@@ -33,7 +42,9 @@
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.0.2",
-    "@types/node": "^20.17.10",
+    "@types/cors": "^2.8.17",
+    "@types/node": "^20.17.12",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.19.0",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -47,6 +58,9 @@
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~5.5.3",
     "vite-plugin-checker": "^0.8.0",
     "vue-eslint-parser": "^9.4.3",
