--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "node_modules/quasar/types/index.d.ts",
     "src/shims-quasar.d.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "server"]
 }
