--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ NODE_ENV=development
 VITE_API_URL=your_api_url
 VITE_EMAIL_ADMIN=your_email
 
+CORS_ORIGIN=http://localhost:9000
+
 SMTP_HOST=your_smtp_host
 SMTP_PORT=your_smtp_port
 SMTP_SECURE=boolean
