feat(app):  Email confirmation

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 VITE_API_URL=your_api_url
 VITE_EMAIL_ADMIN=your_email
 
+SERVER_PORT=3000
 CORS_ORIGIN=http://localhost:9000
 
 SMTP_HOST=your_smtp_host
