--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "clean": "quasar clean",
     "dev:server-ts": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm  --trace-deprecation server/index.ts",
-    "dev:server": "node --env-file=.env server/index.js",
+    "dev:server": "node -r dotenv/config server/index.js dotenv_config_path=.env",
     "dev:client": "quasar dev",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build": "quasar build",
