feat(app): Order cofirm

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ NODE_ENV=development
 
 VITE_API_URL=your_api_url
 VITE_EMAIL_ADMIN=your_email
+VITE_GA_ID=your_ga_id
 
 SERVER_PORT=3000
 CORS_ORIGIN=http://localhost:9000
