--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run build:client && npm run build:server",
     "predeploy": "npm run build",
     "deploy": "cross-env NODE_ENV=production gh-pages -d dist --add",
-    "postdeploy": "echo 'CNAME' > dist/CNAME && echo 'shop.nenadbursac.com' >> dist/CNAME",
+    "postdeploy": "echo 'shop.nenadbursac.com' >> dist/CNAME",
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
     "deploy-spa": "cross-env NODE_ENV=production quasar build -m spa && gh-pages -d dist/spa"
