--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "build:client": "quasar build -m spa",
     "build:server": "mkdir -p dist/server && cp server/* dist/server/",
     "build": "npm run build:client && npm run build:server",
-    "predeploy-o": "npm run build && rm -f dist/CNAME",
-    "deploy-full": "cross-env NODE_ENV=production gh-pages -d dist --add",
-    "postdeploy-o": "echo 'shop.nenadbursac.com' > dist/CNAME",
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
     "deploy": "cross-env NODE_ENV=production quasar build -m spa && mkdir -p dist/spa/server && cp server/* dist/spa/server/ && rm -f dist/spa/CNAME && echo 'shop.nenadbursac.com' > dist/spa/CNAME && gh-pages -d dist/spa"
@@ -38,7 +35,6 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "pinia": "^2.0.11",
-    "quasar": "^2.17.5",
     "vue": "^3.4.18",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.12"
@@ -46,7 +42,7 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
-    "@quasar/app-vite": "^2.0.2",
+    "@quasar/app-vite": "^2.0.5",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.17.12",
     "@types/nodemailer": "^6.4.17",
@@ -62,12 +58,15 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "quasar": "^2.17.6",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "~5.5.3",
+    "vite": "^6.0.7",
     "vite-plugin-checker": "^0.8.0",
+    "vite-plugin-html": "^3.2.2",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   },
