--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run build:client && npm run build:server",
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
-    "deploy": "cross-env NODE_ENV=production quasar build -m spa && mkdir -p dist/spa/server && cp server/* dist/spa/server/ && rm -f dist/spa/CNAME && echo 'shop.nenadbursac.com' > dist/spa/CNAME && gh-pages -d dist/spa"
+    "deploy": "dotenv -e .env.production -- cross-env NODE_ENV=production quasar build -m spa && mkdir -p dist/spa/server && cp server/* dist/spa/server/ && rm -f dist/spa/CNAME && echo 'shop.nenadbursac.com' > dist/spa/CNAME && gh-pages -d dist/spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
@@ -52,6 +52,7 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.17.0",
     "eslint-plugin-vue": "^9.30.0",
     "gh-pages": "^6.3.0",
