--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "pinia": "^2.0.11",
+    "qrcode": "^1.5.4",
     "vue": "^3.4.18",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.12"
@@ -46,6 +47,7 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^20.17.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.19.0",
     "@vue/eslint-config-prettier": "^10.1.0",
