--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=environment
 VITE_API_URL=your_api_url
 VITE_EMAIL_ADMIN=your_email
 VITE_GA_ID=your_ga_id
+VITE_RATES_API_URL=rates_api_url
 
 SERVER_PORT=3000
 CORS_ORIGIN=http://localhost:9000
