feat(ips): Implement pt

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ VITE_RATES_API_URL=rates_api_url
 
 SERVER_PORT=3000
 CORS_ORIGIN=http://localhost:9000
+VUE_ROUTER_MODE=history
 
 SMTP_HOST=your_smtp_host
 SMTP_PORT=your_smtp_port
