refactor(storage): Storage wrapper

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ VITE_API_URL=your_api_url
 VITE_EMAIL_ADMIN=your_email
 VITE_GA_ID=your_ga_id
 VITE_RATES_API_URL=rates_api_url
+VITE_STORAGE_KEY=your_storage_key
+VITE_DEV=true
 
 SERVER_PORT=3000
 CORS_ORIGIN=http://localhost:9000
