--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VITE_EMAIL_ADMIN=your_email
 VITE_GA_ID=your_ga_id
 VITE_RATES_API_URL=rates_api_url
 VITE_STORAGE_KEY=your_storage_key
+VITE_SHOP_NAME=your_shop_name
 
 SERVER_PORT=3000
 CORS_ORIGIN=http://localhost:9000
