--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pinia": "^2.0.11",
     "qrcode": "^1.5.4",
     "vue": "^3.4.18",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.12"
   },
