--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "nodemon": "^3.1.9",
     "pinia": "^2.0.11",
     "qrcode": "^1.5.4",
-    "vue": "^3.4.18",
-    "vue-easy-lightbox": "^1.19.0",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.12"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "vue-i18n": "^9.14.2",
+    "pinia": "^2.3.0",
+    "@quasar/app-vite": "^2.0.5",
+    "vue-easy-lightbox": "^1.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
