--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "clean": "quasar clean",
     "dev:server-ts": "NODE_OPTIONS='--loader ts-node/esm' ts-node --esm  --trace-deprecation server/index.ts",
     "dev:server": "node -r dotenv/config server/index.js dotenv_config_path=.env",
-    "dev:client": "quasar dev",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev": "quasar dev",
+    "dev:smtp": "concurrently \"npm run dev:server\" \"npm run dev\"",
     "build-all": "quasar build",
     "build:client": "quasar build -m spa",
     "build:server": "mkdir -p dist/server && cp server/* dist/server/",
     "build": "npm run build:client && npm run build:server",
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
-    "deploy": "dotenv -e .env.production -- cross-env NODE_ENV=production quasar build -m spa && mkdir -p dist/spa/server && cp server/* dist/spa/server/ && rm -f dist/spa/CNAME && echo 'shop.nenadbursac.com' > dist/spa/CNAME && gh-pages -d dist/spa"
+    "deploy": "dotenv -e .env.production -- cross-env NODE_ENV=production quasar build -m spa rm -f dist/spa/CNAME && echo 'shop.nenadbursac.com' > dist/spa/CNAME && gh-pages -d dist/spa"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
