--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "dev:server": "node -r dotenv/config server/index.js dotenv_config_path=.env",
     "dev": "quasar dev",
     "dev:smtp": "concurrently \"npm run dev:server\" \"npm run dev\"",
-    "build-all": "quasar build",
+    "build": "quasar build",
     "build:client": "quasar build -m spa",
     "build:server": "mkdir -p dist/server && cp server/* dist/server/",
-    "build": "npm run build:client && npm run build:server",
+    "build-all": "npm run build:client && npm run build:server",
     "postinstall": "quasar prepare",
     "analyze": "quasar build --analyze",
     "deploy": "dotenv -e .env.production -- cross-env NODE_ENV=production quasar build -m spa rm -f dist/spa/CNAME && echo 'shop.nenadbursac.com' > dist/spa/CNAME && gh-pages -d dist/spa"
   },
   "dependencies": {
+    "@quasar/app-vite": "^2.0.5",
     "@quasar/extras": "^1.16.4",
     "@types/express": "^5.0.0",
     "axios": "^1.2.1",
@@ -34,13 +35,11 @@
     "express": "^4.21.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
+    "pinia": "^2.3.0",
     "qrcode": "^1.5.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vue-i18n": "^9.14.2",
-    "pinia": "^2.3.0",
-    "@quasar/app-vite": "^2.0.5",
-    "vue-easy-lightbox": "^1.19.0"
+    "vue-easy-lightbox": "^1.19.0",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
@@ -50,6 +49,7 @@
     "@types/node": "^20.17.12",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
+    "@types/vue-i18n": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.19.0",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -73,6 +73,7 @@
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-html": "^3.2.2",
     "vue-eslint-parser": "^9.4.3",
+    "vue-i18n": "^9.14.2",
     "vue-tsc": "^2.1.10"
   },
   "engines": {
