refactor(repo): Rename

--- a/src-capacitor/ios/App/App/Info.plist
+++ b/src-capacitor/ios/App/App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>E-Commerce Platform</string>
+	<string>E-Comm Shop</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
