--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "e-commerce-platform",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "E-Commerce Platform",
+  "description": "E-Commerce Platform Client",
+  "productName": "E-Comm Shop",
   "author": "Nenad <nbursa@gmail.com>",
   "private": true,
   "type": "module",
